--- a/src/components/Cards/styles.css
+++ b/src/components/Cards/styles.css
@@ -103,3 +103,32 @@
     padding: 0px;
   }
 }
+
+.card-box {
+  width: 300px;
+  overflow: hidden;
+}
+.box {
+  position: absolute;
+  margin-left:250px;
+  transform: translateX(-50%) translateY(-50%);
+  margin-top: 0px;
+  text-align: center;
+  transition: 0.5s;
+  width: 80px;
+  height: 40px;
+  line-height: 40px;
+  opacity: 0;
+}
+
+.card-box:hover .box{
+  margin-top: -380px;
+  z-index: 100;
+  opacity: 1;
+}
+.box>img {
+  background: white;
+  border: 1px solid lightgrey;
+  border-radius: 5px;
+  margin-right: 3px;
+}
