--- a/src/page/user/myProfile.css
+++ b/src/page/user/myProfile.css
@@ -45,5 +45,10 @@ body.active-modal {
     right: 10px;
     padding: 5px 7px;
 }
+.agent-avatar{
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+}
 
 
