done upload file

--- a/src/components/Filter/styles.css
+++ b/src/components/Filter/styles.css
@@ -1,8 +1,7 @@
 .filter-div {
-
   padding: 1rem 3rem;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   overflow-x: auto;
 }
